[package]
name = "request_export"
version = "0.1.0"
authors = ["Projit <projit.bandy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = ""
url = ""
serde = ""
serde-pickle = ""
serde_json = ""

[lib]
name = "request_export"
crate-type = ["dylib"]
